--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
   <title>Document</title>
 </head>
 <body>
+  {{>nav}}
   {{{body}}}
 </body>
 </html>
