--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,7 +8,11 @@
   <title>Document</title>
 </head>
 <body>
+  <header>
+    <h1>Персональный сайт Генерации носков</h1>
+  </header>
   {{>nav}}
   {{{body}}}
+  <footer>Информация о магазине</footer>
 </body>
 </html>
