--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,6 +1,8 @@
 <h2>SignIn</h2>
-<form class="signup" action="/index" method="POST">
+<form class="signin" action="/index" method="POST">
     <input type="email"  name="email">
     <input type="password"  name="password">
     <button type="submit">Signin</button>
 </form>
+
+<script defer src="/js/signin.js"></script>
