--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -5,3 +5,5 @@
     <input type="password"  name="password">
     <button type="submit">Signup</button>
 </form>
+
+<script defer src="/js/signup.js"></script>
