--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -3,10 +3,10 @@
 </h1>
 <nav>
     {{#if login}}
-    <a href="login/logout">LogOut</a>
+    <a href="http://localhost:3000/login/logout">LogOut</a>
     {{else}}
-    <a href="login/signin">SignIn</a>
-    <a href="login/signUp">SignUp</a>
+    <a href="http://localhost:3000/login/signin">SignIn</a>
+    <a href="http://localhost:3000/login/signUp">SignUp</a>
     {{/if}}
     <a href="/cookie">Cookie</a>
 </nav>
