--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,5 +1,5 @@
 <h2>SignIn</h2>
-<form class="signup" action="/index" method="POST">   
+<form class="signup" action="/login/signin" method="POST">   
     <input type="email"  name="email">
     <input type="password"  name="password">
     <button type="submit">Signin</button>
