--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -5,4 +5,4 @@
     <button type="submit">Signin</button>
 </form>
 
-<script defer src="/js/signin.js"></script>
+{{!-- <script defer src="/js/signin.js"></script> --}}
