--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -6,4 +6,4 @@
     <button type="submit">Signup</button>
 </form>
 
-<script defer src="/js/signup.js"></script>
+{{!-- <script defer src="/js/signup.js"></script> --}}
