--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,1 +1,12 @@
 <h2>Its a index handlebars</h2>
+
+ {{#if name}}
+Добро пожаловать, {{name}}
+
+<form action="/generator">
+<button type="submit">Создать носки</button>
+</form>
+
+
+{{/if}}
+
