--- a/public/template/generatepattern.hbs
+++ b/public/template/generatepattern.hbs
@@ -1,7 +1,11 @@
 <div>
-  {{#each pattern}}
+  {{#each this}}
 
 {{name}}
-
+<p>
+<img src="{{url}}" alt="{{name}}">  
+</p>
 {{/each}}
+
 </div>
+<h1>ITS PatterN</h1>
