--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,7 +1,14 @@
 <h2>SignIn</h2>
+<h3>Добро пожаловать на сайт генерации носков</h3>
+<p>Войдите в систему, чтобы использовать генератор</p>
+
+
+
+
+
 <form class="signup" action="/login/signin" method="POST">   
-    <input type="email"  name="email">
-    <input type="password"  name="password">
+    <input type="email"  name="email" placeholder="E-mail">
+    <input type="password"  name="password"  placeholder="Password">
     <button class="btn btn-primary" type="submit">Signin</button>
 </form>
 
