--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <h2>Its a index handlebars</h2>
 
- {{#if name}}
-Добро пожаловать, {{name}}
+ {{#if userName}}
+Добро пожаловать, {{userName}}
 
 <form action="/generator">
 <button type="submit">Создать носки</button>
