--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -4,12 +4,15 @@
 
 
 
-
-
-<form class="signup" action="/login/signin" method="POST">   
+<div>
+<form class="signin" action="/login/signin" method="POST">   
     <input type="email"  name="email" placeholder="E-mail">
     <input type="password"  name="password"  placeholder="Password">
     <button class="btn btn-primary" type="submit">Signin</button>
 </form>
 
-{{!-- <script defer src="/js/signin.js"></script> --}}
+
+</div>
+
+
+<script defer src="/js/signin.js"></script>
