--- a/public/template/login/invaliddata.hbs
+++ b/public/template/login/invaliddata.hbs
@@ -1,7 +1,7 @@
-<p> Такого пользователя нет
+ Такого пользователя нет
   <form id='regist' action="/login/signup" method="GET" >
     <button type="submit">Регистрация</button>
   </form>
-</p>
+
 
 
