--- a/views/favourites.hbs
+++ b/views/favourites.hbs
@@ -10,7 +10,7 @@
 </div> --}}
 
 
-<div class="card" style="width: 18rem;">
+{{!-- <div class="card" style="width: 18rem;">
   <ul class="list-group list-group-flush">
     {{#each favourites}}
     <li class="list-group-item">Color</li>
@@ -19,4 +19,4 @@
     <a href="{{this._id}}">Поделиться ссылкой</a>
     {{/each}}
   </ul>
-</div>
+</div> --}}
