--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,6 +1,3 @@
-<h1>nav panel
-  тут должен быть Signin Signup favourites box 
-</h1>
 <nav>
     {{#if login}}
     <a href="http://localhost:3000/login/logout">LogOut</a>
@@ -10,3 +7,5 @@
     {{/if}}
     <a href="/cookie">Cookie</a>
 </nav>
+<script defer src=""></script>
+
