--- a/views/generator.hbs
+++ b/views/generator.hbs
@@ -8,7 +8,11 @@
   {{/each}}
 </div>
 
-
+{{!-- <div class="socks_p">
+  {{#each color}}
+ <p>{{name}}</p>
+  {{/each}}
+</div> --}}
 
 
 <script defer src="js/generator.js"></script>
