--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,21 @@
-div{
-color: blueviolet;
+* {
+	margin: 0;
+	padding: 0;
 }
+html,
+body {
+	height: 100%;
+}
+.wrapper {
+	display: table;
+	height: 100%;
+}
+.content {
+	display: table-row;
+	height: 100%;
+}
+
+.nav-wrapper {
+  padding: 0 2rem;
+}
+
