--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,20 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> --}}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-  <!-- Compiled and minified JavaScript -->
+  {{!-- <link rel="stylesheet" href="/css/style.css"> --}}
+  {{!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> --}}
+  {{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> --}}
   <script refer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  
   <title>Document</title>
 </head>
 <body>
-  <header>
-    <h2>Персональный сайт Генерации носков</h2>
-  </header>
   {{>nav}}
-  {{{body}}}
-  <footer>Информация о магазине</footer>
+  <div class="wrapper">
+  <h2>Персональный сайт Генерации носков</h2>
+  {{{body}}} 
+  </div>
+  {{>footer}}
 </body>
 </html>
