--- a/views/box.hbs
+++ b/views/box.hbs
@@ -16,6 +16,8 @@
     <li class="list-group-item">Pic</li>
     <li class="list-group-item">Pattern</li>
     <a href="{{this._id}}">Поделиться ссылкой</a>
+    <button id={{this._id}} class="deleteBtn">удалить</button>
     {{/each}}
   </ul>
 </div>
+
