--- a/views/favourites.hbs
+++ b/views/favourites.hbs
@@ -17,6 +17,26 @@
     <li class="list-group-item">Pic</li>
     <li class="list-group-item">Pattern</li>
     <a href="{{this._id}}">Поделиться ссылкой</a>
+    <button id={{this._id}} class="deleteButton">удалить</button>
     {{/each}}
   </ul>
 </div>
+
+
+<script>
+    const deleteListBtn = document.querySelectorAll('.deleteButton')
+    deleteListBtn.addEventListener('click', async (e) => {
+        const div = e.target.parentElement.parentElement
+        const id = e.target.id
+        const response = await fetch(`/box/${id} `, {
+            method: 'DELETE',
+            header: {
+                'Content-Type': 'application/json'
+            },
+            const result = await response.json()
+            if(result.success) {
+                div.remove()
+            }
+        })
+    })
+</script>
