--- a/public/template/accept.hbs
+++ b/public/template/accept.hbs
@@ -1,10 +1,13 @@
-<div>
-  <p>Вы выбрали носки {{color}} цвета </p>
+
+<h3>Вы сгенерировали носки со следующими параметрами:</h3>
+
+<div class = 'flex'>
+  <p class="{{color}}">Вы выбрали носки {{color}} цвета </p>
   <p>
-    <img src="{{pic.url}}" alt="{{pic.name}}">
+    <img height="200px" width="200px" src="{{pic.url}}" alt="{{pic.name}}">
   </p>
   <p>
-    <img src="{{pattern.url}}" alt="{{pattern.name}}">
+    <img height="200px" width="200px" src="{{pattern.url}}" alt="{{pattern.name}}">
   </p>
 </div>
 
