--- a/public/template/generatepattern.hbs
+++ b/public/template/generatepattern.hbs
@@ -1,11 +1,12 @@
-<div>
+<h3>Выберите узор для носков:</h3>
+<div class = 'flex'>
   {{#each this}}
 
-{{name}}
+
 <p>
-<img src="{{url}}" alt="{{name}}">  
+<img height="200px" width="200px" src="{{url}}" alt="{{name}}">  
 </p>
 {{/each}}
 
 </div>
-<h1>ITS PatterN</h1>
+
