--- a/views/generator.hbs
+++ b/views/generator.hbs
@@ -1,14 +1,19 @@
-<h3>generator</h3>
 
-<div>
+<div class ='main'>
+
+<h3>Выберите цвет носков, затем картинку , и потом узор</h3>
+
+<div class = 'flex'>
+  
   {{#each color}}
 
- <p> {{name}} </p> 
+ <p class = '{{name}}'> {{name}} </p> 
+ {{!-- <span class = '{{name}}'> . </span>  --}}
 
   {{/each}}
 </div>
 
-
+</div>
 
 
 <script defer src="js/generator.js"></script>
