--- a/views/order.hbs
+++ b/views/order.hbs
@@ -3,14 +3,16 @@
 <p>{{user.name}} , Ваш Заказ:</p>
 
 {{#each user.box }}
-<div class="{{_id}}">
-    <li class="list-group-item">{{item.color}} </li>
-    <li class="list-group-item">
-     <img src="{{item.pic.url}}" alt="{{item.pic.name}}">
-      </li>
-    <li class="list-group-item">
-      <img src="{{item.pattern.url}}" alt="{{item.pattern.name}}">
-    </li>
+<div class="{{_id}} ">
+  <div class='flex'>
+    <p class="{{item.color}}"> {{item.color}} </p> 
+    <p>
+     <img height="200px" width="200px" src="{{item.pic.url}}" alt="{{item.pic.name}}">
+      </p>
+  <p>
+      <img height="200px" width="200px" src="{{item.pattern.url}}" alt="{{item.pattern.name}}">
+   </p>
+</div>
    <p class = 'amount'>
  <h3 class="count"> Количество: {{amount}} </h3>
 
