--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,10 +1,10 @@
-<h2>SignIn</h2>
+
 <h3>Добро пожаловать на сайт генерации носков</h3>
 <p>Войдите в систему, чтобы использовать генератор</p>
 
 
 
-<div>
+<div class='center'>
 <form class="signin" action="/login/signin" method="POST">   
     <input type="email"  name="email" placeholder="E-mail">
     <input type="password"  name="password"  placeholder="Password">
