--- a/views/submitorder.hbs
+++ b/views/submitorder.hbs
@@ -1,4 +1,5 @@
-<h2>
+<h3>
  <p>Спасибо за Ваш заказ</p> 
   <p>Представитель магазина скоро свяжется в Вами!</p> 
-</h2>
+<a href="http://localhost:3000/">На главную</a>
+</h3>
