--- a/public/template/accept.hbs
+++ b/public/template/accept.hbs
@@ -11,15 +11,16 @@
   </p>
 </div>
 
-
+<div class='container'>
 <form action="/generator/favourite" method="POST">
-  <button type="submit">Добавить в избранное</button>
+  <button class="btns " type="submit">Добавить в избранное</button>
 </form>
 
 <form action="/generator/box" method="POST">
-  <button type="submit">Добавить в корзину</button>
+  <button class="btns" type="submit">Добавить в корзину</button>
 </form>
 
 <form action="/generator/skip" method="POST">
-  <button type="submit">Начать заново</button>
+  <button class="btns" type="submit">Начать заново</button>
 </form>
+</div>
