--- a/public/template/login/invaliddata.hbs
+++ b/public/template/login/invaliddata.hbs
@@ -1,6 +1,6 @@
- Такого пользователя нет
+<h3> Такого пользователя нет</h3>
   <form id='regist' action="/login/signup" method="GET" >
-    <button type="submit">Регистрация</button>
+    <button class="registerbtn" type="submit">Регистрация</button>
   </form>
 
 
