--- a/views/signin.hbs
+++ b/views/signin.hbs
@@ -1,4 +1,4 @@
-
+{{!-- 
 <h3>Добро пожаловать на сайт генерации носков</h3>
 <p>Войдите в систему, чтобы использовать генератор</p>
 
@@ -15,4 +15,27 @@
 </div>
 
 
+<script defer src="/js/signin.js"></script>
+
+ --}}
+
+
+
+<h3>Войдите в систему, чтобы использовать генератор</h3>
+
+
+<div class="container"> 
+
+<div class="wrapper-login">
+<form class="signin" action="/login/signin" method="POST">   
+    <div class="container-login">
+      <h2 class="reg-title">Добро пожаловать на сайт генерации носков</h2>
+    <input class="inputReg" type="email"  name="email" placeholder="E-mail">
+    <input class="inputReg" type="password"  name="password"  placeholder="Password">
+    <button class="registerbtn" type="submit">Войти</button>
+    </div>
+</form>
+</div>
+
+</div>
 <script defer src="/js/signin.js"></script>
