--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,3 +1,7 @@
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,16 +9,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
- <link rel="stylesheet" href="/css/styles.css">
-  {{!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> --}}
+  <link rel="stylesheet" href="/css/styles.css">
   <title>Document</title>
 </head>
 <body>
   <header>
-    <h1>Персональный сайт Генерации носков</h1>
+   {{>nav}}
   </header>
-  {{>nav}}
-  {{{body}}}
-  <footer>Информация о магазине</footer>
+    <div class="contain"> 
+      {{{body}}}
+    </div>
+  <footer>
+    <h1>&copy; redsox team 2021 </h1>
+  </footer>
 </body>
 </html>
