--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,4 +1,4 @@
-<h2>SignUp</h2>
+{{!-- <h2>SignUp</h2>
 <div>
   <form class="signup" action="/login/signup" method="POST">
     <input type="text"  name="name" placeholder="Name">
@@ -9,4 +9,25 @@
 </div>
 
 
+<script defer src="/js/signup.js"></script>
+
+ --}}
+
+
+<div class="container"> 
+
+
+<div class="wrapper-auth">
+  <form class="signup" action="/login/signup" method="POST">
+   <div class="container-auth">
+     <h2 class="reg-title">регистрация</h2>
+     <input class="inputReg" type="text"  name="name" placeholder="Name">
+    <input class="inputReg" type="email"  name="email" placeholder="E-mail">
+    <input class="inputReg" type="password"  name="password" placeholder="password">
+    <button class="registerbtn" type="submit">Зарегистрироваться</button>
+   </div>
+</form>
+</div>
+
+</div>
 <script defer src="/js/signup.js"></script>
