--- a/views/favourites.hbs
+++ b/views/favourites.hbs
@@ -1,6 +1,6 @@
 
 
-<h3>Сгенерированные носки в избранном:</h3>
+<h3 class="title-fav">Сгенерированные носки в избранном:</h3>
  
 
    {{#each fav }}
