--- a/views/submitorder.hbs
+++ b/views/submitorder.hbs
@@ -1,5 +1,10 @@
 <h3>
+ <div class="text-ord">
  <p>Спасибо за Ваш заказ</p> 
   <p>Представитель магазина скоро свяжется в Вами!</p> 
-<a href="http://localhost:3000/">На главную</a>
+
+ </div>
+  <form action="http://localhost:3000/">
+    <button class = 'tobox btns' href="http://localhost:3000/">На главную</button>
+</form>
 </h3>
